@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.4318 2004/01/01 20:07:00 salo Exp $
+$NetBSD: CHANGES,v 1.4319 2004/01/01 21:46:55 cube Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -13,3 +13,6 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated moz-mplayer to 1.0 [salo 2004-01-01]
 	Added awhois-1.61 [cjep 2004-01-01]
 	Updated xfstt to 1.6 [salo 2004-01-01]
+	Added sylpheed-claws-dillo-viewer-0.9.7 [cube 2004-01-01]
+	Added sylpheed-claws-image-viewer-0.9.7 [cube 2004-01-01]
+	Added sylpheed-claws-trayicon-0.9.7 [cube 2004-01-01]
